# furniture-retailer

./: Cargo.toml  Makefile.toml  README.md
dbschema/: default.esdl
dbschema/migrations/: 00001-m12a4d4.edgeql  00002-m136v3k.edgeql  00003-m1eno76.edgeql  00004-m17xaam.edgeql  00005-m1vravo.edgeql  00006-m1dp24x.edgeql  00007-m1fkp7b.edgeql  00008-m1mofid.edgeql  00009-m14izjz.edgeql  00010-m1zzsas.edgeql  00011-m17ws5z.edgeql  00012-m1b3azt.edgeql  00013-m1zilob.edgeql  00014-m1q3n2n.edgeql  00015-m14rcrj.edgeql  00016-m1hqwn4.edgeql  00017-m1mfb4j.edgeql
src/: main.rs  model.rs  repository.rs
