[package]
name = "ddd-rust-edgedb"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = "1"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
edgedb-tokio = "0.5"
edgedb-protocol = "0.6"
edgedb-derive = "0.5"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serial_test = "3"
